All pages done except processing sketches. Overflow-y not working.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
       <header>
 
-        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <a id="about" href="about-me.html">About</a>
+        <a href="index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+        <a href="about-me.html">About</a>
 
       </header>
 
@@ -30,28 +30,28 @@
         <nav>
           <ol>
             <li>
-              <a onmouseover="changeBackground('images/menu/comics-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="artwork/cyclux.html">Comics</a>
+              <a onmouseover="changeBackground('images/menu/comics-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="artwork/comics.html">Comics</a>
             </li>
             <li>
-              <a onmouseover="changeBackground('images/menu/illustrations-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="artwork/illustrations.html">Illustrations</a>
+              <a onmouseover="changeBackground('images/menu/illustrations-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="artwork/illustrations.html">Illustrations</a>
             </li>
             <li>
-              <a onmouseover="changeBackground('images/menu/animation-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="artwork/animations.html">Animations</a>
+              <a onmouseover="changeBackground('images/menu/animation-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="artwork/animations.html">Animations</a>
             </li>
             <li>
-              <a onmouseover="changeBackground('images/menu/photo-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="artwork/photo.html">Photo</a>
+              <a onmouseover="changeBackground('images/menu/photo-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="artwork/photo.html">Photo</a>
             </li>
             <li>
-              <a onmouseover="changeBackground('images/menu/virtual-fixtures-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="projects/virtual-fixtures.html">Virtual Fixtures</a>
+              <a onmouseover="changeBackground('images/menu/virtual-fixtures-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="projects/virtual-fixtures.html">Virtual Fixtures</a>
             </li>
             <li>
-              <a onmouseover="changeBackground('images/menu/find-neo-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="projects/neo.html">Find NEO</a>
+              <a onmouseover="changeBackground('images/menu/find-neo-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="projects/neo.html">Find NEO</a>
             </li>
             <li>
-              <a onmouseover="changeBackground('images/menu/line-collection-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="projects/linecollection.html">Line Collection</a>
+              <a onmouseover="changeBackground('images/menu/line-collection-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="projects/linecollection.html">Line Collection</a>
             </li>
             <li>
-              <a onmouseover="changeBackground('images/menu/processing-sketches-invert.jpg')" onmouseout="whiteBackground()" class="nav-option" href="projects/processing-sketches.html">Processing Sketches</a>
+              <a onmouseover="changeBackground('images/menu/processing-sketches-invert.jpg')" onmouseout="whiteBackground('images/menu/slit-scan.jpg')" class="nav-option" href="projects/processing-sketches.html">Processing Sketches</a>
             </li>
           </ol>
         </nav>
