--- a/projects/processing-sketches.html
+++ b/projects/processing-sketches.html
@@ -6,117 +6,89 @@
     <meta name="author" content="Wesley Klein">
     <meta name="desciption" content="The personal website of Wesley Klein.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="images/pixel-me.png">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div class="sidenav-wrapper">
-      <a class="nav-option title" href="../index.html">Wesley<br/>Klein</a>
-      <nav class="sidenav">
-        <button class="dropdown-btn nav-option">artwork</button>
-        <div class="dropdown-container clicked">
-          <button class="dropdown-btn nav-option">comics</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="../artwork/cyclux.html">cyclux</a>
-            <a class="nav-option" href="../artwork/branches.html">branches</a>
-          </div>
-          <a class="nav-option" href="../artwork/illustrations.html">illustrations</a>
-          <a class="nav-option" href="../artwork/animations.html">animations</a>
-          <a class="nav-option" href="../artwork/photo.html">photo</a>
-        </div>
-        <button class="dropdown-btn nav-option">projects</button>
-        <div class="dropdown-container">
-          <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
-          <a class="nav-option" href="neo.html">find neo</a>
-          <a class="nav-option" href="linecollection.html">line<br/>collection</a>
-          <a class="nav-option" href="lifesimulator.html">life<br/>simulator</a>
-          <a class="nav-option" href="processing-sketches.html">processing<br/>sketches</a>
-        </div>
-        <a class="nav-option" href="../blog.html">blog</a>
-        <a class="nav-option" href="../about-me.html">about</a>
-      </nav>
-      <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-    </div>
 
-    <div class="topnav-wrapper">
-      <nav class="topnav">
-        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
-        <div class="dropdown-container main-dropdown">
-          <button class="dropdown-btn nav-option">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="../artwork/cyclux.html">cyclux</a>
-              <a class="nav-option" href="../artwork/branches.html">branches</a>
-            </div>
-            <a class="nav-option" href="../artwork/illustrations.html">illustrations</a>
-            <a class="nav-option" href="../artwork/animations.html">animations</a>
-            <a class="nav-option" href="../artwork/photo.html">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
-            <a class="nav-option" href="neo.html">find neo</a>
-            <a class="nav-option" href="linecollection.html">line collection</a>
-            <a class="nav-option" href="lifesimulator.html">life simulator</a>
-            <a class="nav-option" href="processing-sketches.html">processing sketches</a>
-          </div>
-          <a class="nav-option" href="../blog.html">blog</a>
-          <a class="nav-option" href="../about-me.html">about</a>
-        </div>
-      </nav>
-    </div>
+    <div id="page-wrapper">
 
-    <main role="main">
-      <div class="link-container">
-        <ul>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/Hkf4Syku7">exploding balls</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/SyzxGGkd7">clicked fireworks</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/Bk4yWwkOm">bobbing ocean</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/HJ6O_1WO7">random chords, many circles</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/rJt59ZZuX">suns colliding</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/rkUBxdZ_Q">pointillism</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/rye6tR-dX">criss-cross gradient</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/SkziiCE_7">row color cirlces</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/Hkz8pREO7">row color circles, row and columns</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/r1ikVXd_m">ghost webcam</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/H1J63H9dX">make your own shape</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/v2e6Y4WyW">game of life</a>
-          </li>
-          <li>
-              <a class="content-link" href="https://editor.p5js.org/chachoblow/present/AEuGouJYL">dynamic collage</a>
-          </li>
-        </ul>
-      </div>
-    </main>
+      <div id="image-wrapper"></div>
+
+      <header>
+
+        <a href="../index.html">< Back</a>
+        <a href="../about-me.html">About</a>
+
+      </header>
+
+      <main>
+
+        <nav>
+          <ol>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/Hkf4Syku7">exploding balls</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/SyzxGGkd7">clicked fireworks</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/Bk4yWwkOm">bobbing ocean</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/HJ6O_1WO7">random chords</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/rJt59ZZuX">suns colliding</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/rkUBxdZ_Q">pointillism</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/rye6tR-dX">criss-cross gradient</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/SkziiCE_7">row color cirlces</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/Hkz8pREO7">rows and columns</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/r1ikVXd_m">ghost webcam</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/H1J63H9dX">make your own shape</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/v2e6Y4WyW">game of life</a>
+            </li>
+            <li>
+              <a class="nav-option" href="https://editor.p5js.org/chachoblow/present/AEuGouJYL">dynamic collage</a>
+            </li>
+          </ol>
+        </nav>
+
+      </main>
+
+    </div> 
+
   </body>
-  <script src="../js/dropdown.js"></script>
+
+  <script src="../js/menu-images-fade.js"></script>
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
 
