--- a/artwork/branches.html
+++ b/artwork/branches.html
@@ -6,90 +6,55 @@
     <meta name="author" content="Wesley Klein">
     <meta name="desciption" content="The personal website of Wesley Klein.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="images/pixel-me.png">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div class="sidenav-wrapper">
-      <a class="nav-option title" href="../index.html">Wesley<br/>Klein</a>
-      <nav class="sidenav">
-        <button class="dropdown-btn nav-option">artwork</button>
-        <div class="dropdown-container clicked">
-          <button class="dropdown-btn nav-option">comics</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="cyclux.html">cyclux</a>
-            <a class="nav-option" href="branches.html">branches</a>
-          </div>
-          <a class="nav-option" href="illustrations.html">illustrations</a>
-          <a class="nav-option" href="animations.html">animations</a>
-          <a class="nav-option" href="photo.html">photo</a>
-        </div>
-        <button class="dropdown-btn nav-option">projects</button>
-        <div class="dropdown-container">
-          <a class="nav-option" href="../projects/virtual-fixtures.html">virtual<br/>fixtures</a>  
-          <a class="nav-option" href="../projects/neo.html">find neo</a>
-          <a class="nav-option" href="../projects/linecollection.html">line<br/>collection</a>
-          <a class="nav-option" href="../projects/lifesimulator.html">life<br/>simulator</a>
-          <a class="nav-option" href="../projects/processing-sketches.html">processing<br/>sketches</a>
-        </div>
-        <a class="nav-option" href="../blog.html">blog</a>
-        <a class="nav-option" href="../about-me.html">about</a>
-      </nav>
-      <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-    </div>
 
-    <div class="topnav-wrapper">
-      <nav class="topnav">
-        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
-        <div class="dropdown-container main-dropdown">
-          <button class="dropdown-btn nav-option">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="cyclux.html">cyclux</a>
-              <a class="nav-option" href="branches.html">branches</a>
-            </div>
-            <a class="nav-option" href="illustrations.html">illustrations</a>
-            <a class="nav-option" href="animations.html">animations</a>
-            <a class="nav-option" href="photo.html">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="../projects/virtual-fixtures.html">virtual<br/>fixtures</a>  
-            <a class="nav-option" href="../projects/neo.html">find neo</a>
-            <a class="nav-option" href="../projects/linecollection.html">line collection</a>
-            <a class="nav-option" href="../projects/lifesimulator.html">life simulator</a>
-            <a class="nav-option" href="../projects/processing-sketches.html">processing sketches</a>
-          </div>
-          <a class="nav-option" href="../blog.html">blog</a>
-          <a class="nav-option" href="../about-me.html">about</a>
-        </div>
-      </nav>
-    </div>
+    <div id="page-wrapper" style="background-image: none;">
 
-    <main role="main">
-      <img class="responsive-image" src="../images/comics/branches/branches-page01.png"
-           alt="First page of the comic 'branches'.">
-      <img class="responsive-image" src="../images/comics/branches/branches-page02.png"
-           alt="Second page of the comic 'branches'.">
-      <img class="responsive-image" src="../images/comics/branches/branches-page03.png"
-           alt="Third page of the comic 'branches'.">
-      <img class="responsive-image" src="../images/comics/branches/branches-page04.png"
-           alt="Fourth page of the comic 'branches'.">
-      <img class="responsive-image" src="../images/comics/branches/branches-page05.png"
-           alt="Fifth page of the comic 'branches'.">
-      <img class="responsive-image" src="../images/comics/branches/branches-page06.png"
-           alt="Sixth page of the comic 'branches'.">
-      <img class="responsive-image" src="../images/comics/branches/branches-page07.png"
-           alt="Seventh page of the comic 'branches'.">
-    </main>
+      <div id="image-wrapper"></div>
+
+      <header>
+
+        <a href="comics.html">< Back</a>
+        <a href="../about-me.html">About</a>
+
+      </header>
+
+      <main>
+
+        <div class="gallery">
+          <img class="gallery-image" src="../images/comics/branches/branches-page01.png"  
+            alt="First spread from the comic 'branches'.">
+          <img class="gallery-image" src="../images/comics/branches/branches-page02.png" 
+            alt="Second spread from the comic 'branches'.">
+          <img class="gallery-image" src="../images/comics/branches/branches-page03.png" 
+            alt="Third spread from the comic 'branches'.">
+          <img class="gallery-image" src="../images/comics/branches/branches-page04.png" 
+            alt="Fourth spread from the comic 'branches'.">
+          <img class="gallery-image" src="../images/comics/branches/branches-page05.png" 
+            alt="Fifth spread from the comic 'branches'.">
+          <img class="gallery-image" src="../images/comics/branches/branches-page06.png" 
+            alt="Sixth spread from the comic 'branches'.">
+          <img class="gallery-image" src="../images/comics/branches/branches-page07.png" 
+            alt="Seventh spread from the comic 'branches'.">
+        </div>
+
+      </main>
+
+    </div> 
+
   </body>
 
-  <script src="../js/dropdown.js"></script>
-  
+  <script src="../js/menu-images-fade.js"></script>
+
 </html>
+
+
+
+
 
