--- a/artwork/photo.html
+++ b/artwork/photo.html
@@ -6,100 +6,67 @@
     <meta name="author" content="Wesley Klein">
     <meta name="desciption" content="The personal website of Wesley Klein.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="images/pixel-me.png">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div class="sidenav-wrapper">
-      <a class="nav-option title" href="../index.html">Wesley<br/>Klein</a>
-      <nav class="sidenav">
-        <button class="dropdown-btn nav-option">artwork</button>
-        <div class="dropdown-container clicked">
-          <button class="dropdown-btn nav-option">comics</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="cyclux.html">cyclux</a>
-            <a class="nav-option" href="branches.html">branches</a>
-          </div>
-          <a class="nav-option" href="illustrations.html">illustrations</a>
-          <a class="nav-option" href="animations.html">animations</a>
-          <a class="nav-option" href="photo.html">photo</a>
-        </div>
-        <button class="dropdown-btn nav-option">projects</button>
-        <div class="dropdown-container">
-          <a class="nav-option" href="../projects/virtual-fixtures.html">virtual<br/>fixtures</a>  
-          <a class="nav-option" href="../projects/neo.html">find neo</a>
-          <a class="nav-option" href="../projects/linecollection.html">line<br/>collection</a>
-          <a class="nav-option" href="../projects/lifesimulator.html">life<br/>simulator</a>
-          <a class="nav-option" href="../projects/processing-sketches.html">processing<br/>sketches</a>
-        </div>
-        <a class="nav-option" href="../blog.html">blog</a>
-        <a class="nav-option" href="../about-me.html">about</a>
-      </nav>
-      <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-    </div>
 
-    <div class="topnav-wrapper">
-      <nav class="topnav">
-        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
-        <div class="dropdown-container main-dropdown">
-          <button class="dropdown-btn nav-option">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="cyclux.html">cyclux</a>
-              <a class="nav-option" href="branches.html">branches</a>
-            </div>
-            <a class="nav-option" href="illustrations.html">illustrations</a>
-            <a class="nav-option" href="animations.html">animations</a>
-            <a class="nav-option" href="photo.html">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="../projects/virtual-fixtures.html">virtual<br/>fixtures</a>  
-            <a class="nav-option" href="../projects/neo.html">find neo</a>
-            <a class="nav-option" href="../projects/linecollection.html">line collection</a>
-            <a class="nav-option" href="../projects/lifesimulator.html">life simulator</a>
-            <a class="nav-option" href="../projects/processing-sketches.html">processing sketches</a>
-          </div>
-          <a class="nav-option" href="../blog.html">blog</a>
-          <a class="nav-option" href="../about-me.html">about</a>
-        </div>
-      </nav>
-    </div>
+    <div id="page-wrapper" style="background-image: none;">
 
-    <main role="main">
-      <img class="responsive-image" src="../images/photographs/brittany-driving-1000h.JPG" 
-           alt="Photograph of a woman driving on a highway.">
-      <img class="responsive-image" src="../images/photographs/grapevine-1000h.JPG" 
-           alt="Photograph of a rainy highway, taken from the perspective of the passenger seat.">
-      <img class="responsive-image" src="../images/photographs/me-bathroom-1000h.JPG" 
-           alt="Photograph that Wesley Klein took of himself. He is standing in front of a mirror.">
-      <img class="responsive-image" src="../images/photographs/dad-grandpa-1000h.JPG" 
-           alt="Photograph of a man and his father sitting in chairs.">
-      <img class="responsive-image" src="../images/photographs/grandparents-window-1000h.JPG" 
-           alt="Photograph of a woman through a window.">
-      <img class="responsive-image" src="../images/photographs/grandma-chandelier-1000h.JPG" 
-           alt="Photograph of a woman sitting at a table.">
-      <img class="responsive-image" src="../images/photographs/megan-dad-2-1000h.JPG" 
-           alt="Photograph of a woman and her father sitting at a table.">
-      <img class="responsive-image" src="../images/photographs/slit-scanning-1-1000h.JPG" 
-           alt="A slit scan photograph of Wesley Klein.">
-      <img class="responsive-image" src="../images/photographs/slit-scanning-2-1000h.JPG" 
-           alt="A slit scan photgraph of Wesley Klein.">
-      <img class="responsive-image" src="../images/photographs/laguna-ripples-1000h.JPG" 
-           alt="Photograph of rocks under water at the beach.">
-      <img class="responsive-image" src="../images/photographs/laguna-algea-1000h.JPG" 
-           alt="Photograph of an algea pool at the beach.">
-      <img class="responsive-image" src="../images/photographs/laguna-rock-1000h.JPG" 
-           alt="Photograph of a rock in the sand at the beach.">
-    </main>
+      <div id="image-wrapper"></div>
+
+      <header>
+
+        <a href="../index.html">< Back</a>
+        <a href="../about-me.html">About</a>
+
+      </header>
+
+      <main>
+
+        <div class="gallery">
+          <img class="gallery-image" src="../images/photographs/brittany-driving-1000h.JPG" 
+            alt="Photograph of a woman driving on a highway.">
+          <img class="gallery-image" src="../images/photographs/grapevine-1000h.JPG" 
+            alt="Photograph of a rainy highway, taken from the perspective of the passenger seat.">
+          <img class="gallery-image" src="../images/photographs/me-bathroom-1000h.JPG" 
+            alt="Photograph that Wesley Klein took of himself. He is standing in front of a mirror.">
+          <img class="gallery-image" src="../images/photographs/dad-grandpa-1000h.JPG" 
+            alt="Photograph of a man and his father sitting in chairs.">
+          <img class="gallery-image" src="../images/photographs/grandparents-window-1000h.JPG" 
+            alt="Photograph of a woman through a window.">
+          <img class="gallery-image" src="../images/photographs/grandma-chandelier-1000h.JPG" 
+            alt="Photograph of a woman sitting at a table.">
+          <img class="gallery-image" src="../images/photographs/megan-dad-2-1000h.JPG" 
+            alt="Photograph of a woman and her father sitting at a table.">
+          <img class="gallery-image" src="../images/photographs/slit-scanning-1-1000h.JPG" 
+            alt="A slit scan photograph of Wesley Klein.">
+          <img class="gallery-image" src="../images/photographs/slit-scanning-2-1000h.JPG" 
+            alt="A slit scan photgraph of Wesley Klein.">
+          <img class="gallery-image" src="../images/photographs/laguna-ripples-1000h.JPG" 
+            alt="Photograph of rocks under water at the beach.">
+          <img class="gallery-image" src="../images/photographs/laguna-algea-1000h.JPG" 
+            alt="Photograph of an algea pool at the beach.">
+          <img class="gallery-image" src="../images/photographs/laguna-rock-1000h.JPG" 
+            alt="Photograph of a rock in the sand at the beach.">
+        </div>
+
+      </main>
+
+    </div> 
+
   </body>
 
-  <script src="../js/dropdown.js"></script>
-  
+  <script src="../js/menu-images-fade.js"></script>
+
 </html>
+
+
+
+
+
+
 
