--- a/projects/linecollection.html
+++ b/projects/linecollection.html
@@ -6,76 +6,58 @@
     <meta name="author" content="Wesley Klein">
     <meta name="desciption" content="The personal website of Wesley Klein.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="images/pixel-me.png">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div class="sidenav-wrapper">
-      <a class="nav-option title" href="../index.html">Wesley<br/>Klein</a>
-      <nav class="sidenav">
-        <button class="dropdown-btn nav-option">artwork</button>
-        <div class="dropdown-container clicked">
-          <button class="dropdown-btn nav-option">comics</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="../artwork/cyclux.html">cyclux</a>
-            <a class="nav-option" href="../artwork/branches.html">branches</a>
-          </div>
-          <a class="nav-option" href="../artwork/illustrations.html">illustrations</a>
-          <a class="nav-option" href="../artwork/animations.html">animations</a>
-          <a class="nav-option" href="../artwork/photo.html">photo</a>
-        </div>
-        <button class="dropdown-btn nav-option">projects</button>
-        <div class="dropdown-container">
-          <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
-          <a class="nav-option" href="neo.html">find neo</a>
-          <a class="nav-option" href="linecollection.html">line<br/>collection</a>
-          <a class="nav-option" href="lifesimulator.html">life<br/>simulator</a>
-          <a class="nav-option" href="processing-sketches.html">processing<br/>sketches</a>
-        </div>
-        <a class="nav-option" href="../blog.html">blog</a>
-        <a class="nav-option" href="../about-me.html">about</a>
-      </nav>
-      <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-    </div>
 
-    <div class="topnav-wrapper">
-      <nav class="topnav">
-        <a href="../index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <button class="dropdown-btn nav-option"><i class="fa fa-bars"></i></button>
-        <div class="dropdown-container main-dropdown">
-          <button class="dropdown-btn nav-option">artwork</button>
-          <div class="dropdown-container clicked">
-            <button class="dropdown-btn nav-option">comics</button>
-            <div class="dropdown-container">
-              <a class="nav-option" href="../artwork/cyclux.html">cyclux</a>
-              <a class="nav-option" href="../artwork/branches.html">branches</a>
-            </div>
-            <a class="nav-option" href="../artwork/illustrations.html">illustrations</a>
-            <a class="nav-option" href="../artwork/animations.html">animations</a>
-            <a class="nav-option" href="../artwork/photo.html">photo</a>
-          </div>
-          <button class="dropdown-btn nav-option">projects</button>
-          <div class="dropdown-container">
-            <a class="nav-option" href="virtual-fixtures.html">virtual<br/>fixtures</a>
-            <a class="nav-option" href="neo.html">find neo</a>
-            <a class="nav-option" href="linecollection.html">line<br/>collection</a>
-            <a class="nav-option" href="lifesimulator.html">life<br/>simulator</a>
-            <a class="nav-option" href="processing-sketches.html">processing<br/>sketches</a>
-          </div>
-          <a class="nav-option" href="../blog.html">blog</a>
-          <a class="nav-option" href="../about-me.html">about</a>
-        </div>
-      </nav>
-    </div>
+    <div id="page-wrapper" style="background-image: none;">
 
-    <main role="main">
-      <div class="sketch-container">
-          <iframe src="https://editor.p5js.org/chachoblow/embed/H1Cb47__Q" frameborder="0"></iframe>
-      </div>
-    </main>
+      <div id="image-wrapper"></div>
+
+      <header>
+
+        <a href="../index.html">< Back</a>
+        <a href="../about-me.html">About</a>
+
+      </header>
+
+      <main class="project-wrapper">
+
+        <div class="project-content-wrapper">
+          <h1>Line Collection</h1>
+          <p>I wanted to make something that only used collections of lines for visuals. Everything within this application ( even the text) is simply a specifically placed line collection.</p>
+          <p>In the main menu, you can choose to either arrange or watch 3 different shapes: a circle, a square, and a triangle. While in the arrange portion, you can use the mouse wheel to make the shape's size different.</p>
+          <p>The application was made with JavaScript. More specifically, it used the p5.js library.</p>
+          <p>If you would like to try the application yourself, please go <a href="https://editor.p5js.org/chachoblow/present/H1Cb47__Q" title="The line collection application" target="_blank">here</a> (however, note that it does not work well on mobile).</p>
+        </div>
+
+        <div class="project-media-wrapper">
+          <img class="project-media" src="../images/line-collection/line-collection-watch-circles.gif" alt="Watching circles on the line collection application." title="The line collection application being used.">
+          <img class="project-media" src="../images/line-collection/line-collection-watch-triangles.gif" alt="Watching triangles on the line collection application." title="The line collection application being used.">
+          <img class="project-media" src="../images/line-collection/line-collection-watch-squares.gif" alt="Watching squares on the line collection application." title="The line collection application being used.">
+          <img class="project-media" src="../images/line-collection/line-collection-arrange.gif" alt="Watching squares on the line collection application." title="The line collection application being used.">
+        </div>
+
+      </main>
+
+    </div> 
+
   </body>
-  <script src="../js/dropdown.js"></script>
+
+  <script src="../js/menu-images-fade.js"></script>
+
 </html>
+
+
+
+
+
+
+
+
+
+
