--- a/projects/virtual-fixtures.html
+++ b/projects/virtual-fixtures.html
@@ -6,38 +6,58 @@
     <meta name="author" content="Wesley Klein">
     <meta name="desciption" content="The personal website of Wesley Klein.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../images/pixel-me.png">
-    <link rel="stylesheet" href="../style-brutal.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400,500,700|Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link rel="shortcut icon" href="images/pixel-me.png">
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
 
-    <header>
-      <a class="nav-option" href="../index.html">back</a>
+    <div id="page-wrapper" style="background-image: none;">
 
-      <div class="vertical-menu-info">
-        <h1 class="stretch">virtual fixtures.</h1>
-        <h2 class="stretch">roguelike cave exploration game // Java</h2>
-      </div>
-    </header>
+      <div id="image-wrapper"></div>
 
-    <main>
-      <div class="project-container">
-        <h1>Virtual Fixtures</h1>
-        <p>Virtual Fixtures is a roguelike cave exploration game developed in Java. The game was inspired by the graphic novel series <a href="https://en.wikipedia.org/wiki/East_of_West" title="Wikipedia entry for East of West" target="_blank">East of West</a>.</p>
-        <p>In Virtual Fixtures, you are trapped in a cave with your Buddy - a hovering AI bot which can project the virtual world for you. You need this projection in order to see where hidden energies are. The downside is that when in the virtual world, you cannot see the numreous traps that riddle the cave in the physical world. Therefore, you must switch back and forth between the two worlds - using one world to find the energies, and the other to avoid traps.</p>
-        <p>When you start the game, you are placed in the middle of a procedurally generated cave system. You can see this below. Note that the HUD displays what your cursor is currently hovering over.</p>
-        <img class="project-media" src="../images/virtual-fixtures/game-hud.gif" alt="Gif of the HUD for Virtual Fixtures" title="HUD for Virtual Fixtures">
-        <p>A main feature that I implemented for this game was ray-casting. You can only see parts of the cave that are within your current line of sight (or parts that you have seen in the past). In order to do this, I used <a href="https://en.wikipedia.org/wiki/Bresenham%27s_line_algorithm" title="Wikipedia entry for Bresenham's line algorithm" target="_blank">Bresenham's line algorithm</a>. This can be seen below.</p>
-        <img class="project-media" src="../images/virtual-fixtures/game-ray-casting.gif" alt="Gif of ray casting in Virtual Fixtures" title="Ray casting for Virtual Fixtures">
-        <p>The main feature of the game is that you can switch between the physical and virtual worlds. In doing this, you can avoid traps while also searching for energies. Another caveat is that when in the virtual world, you can no longer see remembered parts of the cave. You are limited to what is currently in view only.</p>
-        <img class="project-media" src="../images/virtual-fixtures/game-switch-worlds.gif" alt="Gif of switching worlds in Virtual Fixtures" title="World switching in Virtual Fixtures">
-        <p>If you would like to see a more in-depth explanation of the game, please watch <a href="https://youtu.be/C-yfkUNuN_M" title="YouTube link to game walkthrough" target="_blank">my video on YouTube</a>.</p>
-      </div>
-    </main>
+      <header>
+
+        <a href="../index.html">< Back</a>
+        <a href="../about-me.html">About</a>
+
+      </header>
+
+      <main class="project-wrapper">
+
+        <div class="project-content-wrapper">
+          <h1>Virtual Fixtures</h1>
+          <p>Virtual Fixtures is a roguelike cave exploration game developed in Java. The game was inspired by the graphic novel series <a href="https://en.wikipedia.org/wiki/East_of_West" title="Wikipedia entry for East of West" target="_blank">East of West</a>.</p>
+          <p>In Virtual Fixtures, you are trapped in a cave with your Buddy - a hovering AI bot which can project the virtual world for you. You need this projection in order to see where hidden energies are. The downside is that when in the virtual world, you cannot see the numreous traps that riddle the cave in the physical world. Therefore, you must switch back and forth between the two worlds - using one world to find the energies, and the other to avoid traps.</p>
+          <p>When you start the game, you are placed in the middle of a procedurally generated cave system. You can see this below. Note that the HUD displays what your cursor is currently hovering over.</p>
+          <p>A main feature that I implemented for this game was ray-casting. You can only see parts of the cave that are within your current line of sight (or parts that you have seen in the past). In order to do this, I used <a href="https://en.wikipedia.org/wiki/Bresenham%27s_line_algorithm" title="Wikipedia entry for Bresenham's line algorithm" target="_blank">Bresenham's line algorithm</a>. This can be seen below.</p>
+          <p>The main feature of the game is that you can switch between the physical and virtual worlds. In doing this, you can avoid traps while also searching for energies. Another caveat is that when in the virtual world, you can no longer see remembered parts of the cave. You are limited to what is currently in view only.</p>
+          <p>If you would like to see a more in-depth explanation of the game, please watch <a href="https://youtu.be/C-yfkUNuN_M" title="YouTube link to game walkthrough" target="_blank">my video on YouTube</a>.</p>
+        </div>
+
+        <div class="project-media-wrapper">
+          <img class="project-media" src="../images/virtual-fixtures/game-hud.gif" alt="Gif of the HUD for Virtual Fixtures" title="HUD for Virtual Fixtures">
+          <img class="project-media" src="../images/virtual-fixtures/game-ray-casting.gif" alt="Gif of ray casting in Virtual Fixtures" title="Ray casting for Virtual Fixtures">
+          <img class="project-media" src="../images/virtual-fixtures/game-switch-worlds.gif" alt="Gif of switching worlds in Virtual Fixtures" title="World switching in Virtual Fixtures">
+        </div>
+
+      </main>
+
+    </div> 
+
   </body>
-  <script src="../js/stretch.js"></script>
+
+  <script src="../js/menu-images-fade.js"></script>
+
 </html>
+
+
+
+
+
+
+
+
 
