--- a/artwork/photo.html
+++ b/artwork/photo.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
-  <body style="overflow-y: hidden;">
+  <body class="horizontal-scroll">
 
     <div id="page-wrapper" style="background-image: none;">
 
