Fixed mobile and tablet color issues on menu.

--- a/about-me.html
+++ b/about-me.html
@@ -18,17 +18,15 @@
 
       <div id="image-wrapper"></div>
 
-      <header>
-
-        <a href="index.html">< back</a>
+      <a id="header-left" href="index.html">< back</a>
+      <div id="header-right">
         <div id="link-container">
-            <a href="https://github.com/chachoblow" title="My Github" class="content-link">Github</a>
-            <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link">LinkedIn</a>
-            <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link">Instagram</a>
-            <a href="images/resume.pdf" title="Download My Resume" class="content-link">Resume</a>      
+          <a href="https://github.com/chachoblow" title="My Github" class="content-link">Github</a>
+          <a href="https://www.linkedin.com/in/wesleyklein/" title="My Linkedin" class="content-link">LinkedIn</a>
+          <a href="https://www.instagram.com/chachoblow" title="My Instagram" class="content-link">Instagram</a>
+          <a href="images/resume.pdf" title="Download My Resume" class="content-link">Resume</a>      
         </div>
-
-      </header>
+      </div>
 
       <main id="about">
 
