--- a/index.html
+++ b/index.html
@@ -18,12 +18,8 @@
 
       <div id="image-wrapper"></div>
 
-      <header>
-
-        <a href="index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
-        <a href="about-me.html">About</a>
-
-      </header>
+      <a id="header-left" href="index.html"><img id="title-image" src="../images/my-eyes-name-clear.png" alt="Website Logo: A pair of drawn eyes with the name 'Wesley Klein' in them."></a>
+      <a id="header-right" href="about-me.html">About</a>
 
       <main>
 
