--- a/projects/processing-sketches.html
+++ b/projects/processing-sketches.html
@@ -18,13 +18,9 @@
 
       <div id="image-wrapper"></div>
 
-      <header>
-
-        <a href="../index.html">< Back</a>
-        <a href="../about-me.html">About</a>
-
-      </header>
-
+      <a id="header-left" href="../index.html">< Back</a>
+      <a id="header-right" href="../about-me.html">About</a>
+      
       <main>
 
         <nav>
