--- a/projects/virtual-fixtures.html
+++ b/projects/virtual-fixtures.html
@@ -18,12 +18,8 @@
 
       <div id="image-wrapper"></div>
 
-      <header>
-
-        <a href="../index.html">< Back</a>
-        <a href="../about-me.html">About</a>
-
-      </header>
+      <a id="header-right" href="../about-me.html">About</a>
+      <a id="header-left" href="../index.html">< Back</a>
 
       <main class="project-wrapper">
 
