--- a/artwork/cyclux.html
+++ b/artwork/cyclux.html
@@ -18,12 +18,8 @@
 
       <div id="image-wrapper"></div>
 
-      <header>
-
-        <a href="comics.html">< Back</a>
-        <a href="../about-me.html">About</a>
-
-      </header>
+      <a id="header-left" href="comics.html">< Back</a>
+      <a id="header-right" href="../about-me.html">About</a>
 
       <main>
 
