--- a/projects/processing-sketches/exploding-balls.html
+++ b/projects/processing-sketches/exploding-balls.html
@@ -18,12 +18,8 @@
 
       <div id="image-wrapper"></div>
 
-      <header>
-
-        <a href="../processing-sketches.html">< Back</a>
-        <a href="../../about-me.html">About</a>
-
-      </header>
+      <a id="header-left" href="../processing-sketches.html">< Back</a>
+      <a id="header-right" href="../../about-me.html">About</a>
 
       <main class="project-wrapper">
 
