Reformatted about me.

--- a/about-me.html
+++ b/about-me.html
@@ -14,7 +14,7 @@
 
   <body>
 
-    <div id="page-wrapper" style="background-image: url('images/menu/about-alt.jpg');">
+    <div id="page-wrapper" style="background-image: none;">
 
       <div id="image-wrapper"></div>
 
@@ -29,12 +29,11 @@
       </div>
 
       <main id="about">
-
         <div class="about-content">
+          <img id="about-img" src="images/menu/about-alt.jpg" 
+          alt="Photo of Wesley Klein.">
+          <h1>Information</h1>
           <ol>
-            <li>
-              Information
-            </li>
             <li>
               Wesley Klein is an artist, maker, builder, and fixer. He completed his mathematics and computer science degree at The University of California, Berkeley. He is seeking oppurtunites within the software engineering field. Specifically, he is interested in virtual reality, agumented reality, creative coding, web design, and in a broad sense, the intersection of art and technology.
             </li>
